# data-generation-tool

./: package-lock.json  package.json  tailwind.config.ts
app/: layout.tsx  page.tsx  sizableButton.tsx
components/: Content.tsx  Graph.tsx  Header.tsx  Notification.tsx  Table.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: interpolate.py  main.rs
types/: keypoint.ts
